--- a/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
@@ -1,11 +1,5 @@
 <div class="nav-container">
-  <svg-icon class="logo" [iconName]="'small-logo'" [iconSize]="'big'"></svg-icon>
-
-  <span class="dots flex gap-x-1 my-4">
-    <span class="w-1 h-1 bg-white rounded-full"></span>
-    <span class="w-1 h-1 bg-white rounded-full"></span>
-    <span class="w-1 h-1 bg-white rounded-full"></span>
-  </span>
+  <svg-icon class="logo mb-2" [iconName]="'small-logo'" [iconSize]="'big'"></svg-icon>
 
   @for (item of navigationBarItems$ | async; track item) {
     <app-navigation-bar-item [item]="item"></app-navigation-bar-item>
