--- a/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.scss
+++ b/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.scss
@@ -1,27 +1,18 @@
 :host {
   @apply flex flex-col justify-between items-center w-16 bg-charcoal py-5;
 
-  &.loading {
-    @apply pointer-events-none;
-
-    & * {
-      @apply pointer-events-none;
-    }
-  }
-
   .nav-container {
-    @apply flex flex-col items-center w-full;
+    @apply flex flex-col items-center w-full gap-3;
   }
 
   @media (max-width: 480px) {
     @apply flex-row justify-between w-full h-14 max-h-14 px-4 py-0;
 
     .nav-container {
-      @apply w-auto h-full flex-row gap-x-4;
+      @apply w-auto h-full flex-row;
     }
 
-    .logo,
-    .dots {
+    .logo {
       @apply hidden;
     }
   }
