--- a/src/app/modules/dashboard/modules/info-cards/components/add-account-modal/add-account-modal.component.html
+++ b/src/app/modules/dashboard/modules/info-cards/components/add-account-modal/add-account-modal.component.html
@@ -7,8 +7,8 @@
         "
         [secondaryText]="form.controls[formFields.AccountName].value"
         [iconName]="form.controls[formFields.AccountIcon].value"
-        [style.background-color]="form.controls[formFields.AccountBgColor].value || '#F0F2F2'"
-        [style.color]="form.controls[formFields.AccountTextColor].value || '#2C4251'"
+        [bgColor]="form.controls[formFields.AccountBgColor].value || '#F0F2F2'"
+        [textColor]="form.controls[formFields.AccountTextColor].value || '#2C4251'"
       ></app-info-card>
     </div>
 
