--- a/src/app/modules/dashboard/modules/info-cards/components/info-cards/accounts-info-card/accounts-info-card.component.html
+++ b/src/app/modules/dashboard/modules/info-cards/components/info-cards/accounts-info-card/accounts-info-card.component.html
@@ -12,8 +12,8 @@
       buildTranslationKey(accountsAmount ? 'titleWithAmount' : 'title')
         | translate: { accountsAmount }
     "
-    [style.color]="'text-white' | classToHexColor"
-    [style.background-color]="'bg-dark-green' | classToHexColor"
+    [textColor]="'text-white' | classToHexColor"
+    [bgColor]="'bg-dark-green' | classToHexColor"
   >
   </app-info-card>
 
