--- a/src/app/modules/dashboard/modules/info-cards/components/info-cards/expense-info-card/expense-info-card.component.html
+++ b/src/app/modules/dashboard/modules/info-cards/components/info-cards/expense-info-card/expense-info-card.component.html
@@ -1,6 +1,6 @@
 <app-info-card
-  [style.background-color]="'bg-white' | classToHexColor"
-  [style.color]="'text-dark-red' | classToHexColor"
+  [bgColor]="'bg-white' | classToHexColor"
+  [textColor]="'text-dark-red' | classToHexColor"
   [iconName]="'arrow-down'"
   [primaryText]="expense$ | async | currencySymbol"
   [secondaryText]="'dashboard.infoCards.expense' | translate"
