responsive select and animation

--- a/src/app/modules/dashboard/modules/info-cards/components/account-card/account-card.component.html
+++ b/src/app/modules/dashboard/modules/info-cards/components/account-card/account-card.component.html
@@ -6,7 +6,7 @@
     [secondaryText]="isAccountWithForeignCurrency ? accountValueInBaseCurrency : account.name"
     [tertiaryText]="isAccountWithForeignCurrency ? account.name : null"
     [bgColor]="account.bgColor"
-    [style.color]="account.textColor"
+    [textColor]="account.textColor"
     [menuActions]="menuActions"
     [menuLoading]="isAccountRemoving$ | async"
   ></app-info-card>
