--- a/src/app/modules/design-system/components/form-controls/color-picker/color-picker.component.html
+++ b/src/app/modules/design-system/components/form-controls/color-picker/color-picker.component.html
@@ -20,6 +20,7 @@
   [colorsAnimation]="isMobile ? null : 'slide-in'"
   [formControl]="formControl"
   (close)="onPanelClose()"
+  (open)="onPanelOpen()"
   (ngModelChange)="valueChanged($event)"
 ></div>
 
