remove ability to delete AL records except category values management

--- a/src/app/modules/dashboard/modules/activity-log/components/account-value-edit-record/account-value-edit-record.component.html
+++ b/src/app/modules/dashboard/modules/activity-log/components/account-value-edit-record/account-value-edit-record.component.html
@@ -1,10 +1,4 @@
-<app-generic-activity-log-record
-  [icon]="record.icon"
-  [date]="record.date"
-  [note]="record?.note"
-  [loading]="this.isRecordRemoving$ | async"
-  (remove)="removeHandler()"
->
+<app-generic-activity-log-record [icon]="record.icon" [date]="record.date" [note]="record?.note">
   <span class="flex flex-col">
     <span class="font-main text-charcoal text-base">
       {{ record.accountName }}
