--- a/src/app/modules/dashboard/modules/activity-log/components/move-money-between-accounts-record/move-money-between-accounts-record.component.html
+++ b/src/app/modules/dashboard/modules/activity-log/components/move-money-between-accounts-record/move-money-between-accounts-record.component.html
@@ -1,9 +1,4 @@
-<app-generic-activity-log-record
-  [icon]="record.icon"
-  [date]="record.date"
-  [loading]="this.isRecordRemoving$ | async"
-  (remove)="removeHandler()"
->
+<app-generic-activity-log-record [icon]="record.icon" [date]="record.date">
   <div class="flex flex-col font-main text-charcoal text-sm overflow-hidden">
     <span
       class="truncate"
