--- a/src/app/modules/design-system/components/generic-activity-log-record/generic-activity-log-record.component.html
+++ b/src/app/modules/design-system/components/generic-activity-log-record/generic-activity-log-record.component.html
@@ -14,11 +14,13 @@
   </div>
 </div>
 
-<app-button
-  [iconName]="'close'"
-  [colorScheme]="'transparent-dark'"
-  [buttonSizeY]="'tiny'"
-  [buttonSizeX]="'tiny'"
-  [loading]="loading"
-  (click)="removeButtonClick()"
-></app-button>
+@if (removeEnabled) {
+  <app-button
+    [iconName]="'close'"
+    [colorScheme]="'transparent-dark'"
+    [buttonSizeY]="'tiny'"
+    [buttonSizeX]="'tiny'"
+    [loading]="loading"
+    (click)="removeButtonClick()"
+  ></app-button>
+}
