--- a/src/app/modules/dashboard/modules/activity-log/components/move-money-between-accounts-record/move-money-between-accounts-record.component.html
+++ b/src/app/modules/dashboard/modules/activity-log/components/move-money-between-accounts-record/move-money-between-accounts-record.component.html
@@ -10,9 +10,13 @@
     </span>
 
     <span class="font-bold text-blue">
-      {{ record.fromAccountValue }} {{ record.fromAccount.currency.symbol }}
-      &rarr;
-      {{ record.toAccountValue }} {{ record.toAccount.currency.symbol }}
+      @if (isSameValueAndCurrency) {
+        {{ record.fromAccountValue }} {{ record.fromAccount.currency.symbol }}
+      } @else {
+        {{ record.fromAccountValue }} {{ record.fromAccount.currency.symbol }}
+        &rarr;
+        {{ record.toAccountValue }} {{ record.toAccount.currency.symbol }}
+      }
     </span>
   </div>
 </app-generic-activity-log-record>
