--- a/src/app/modules/dashboard/modules/categories/components/category-value-modal/category-value-modal.component.html
+++ b/src/app/modules/dashboard/modules/categories/components/category-value-modal/category-value-modal.component.html
@@ -1,6 +1,6 @@
 <app-base-modal
   *ngVar="accounts$ | async as accounts"
-  [titleTranslationKey]="(category$ | async)?.name"
+  [titleTranslationKey]="category?.name"
   [subtitleTranslationKey]="'dashboard.categoryValueModal.subtitle'"
   [footerTemplate]="footer"
 >
