--- a/src/app/modules/dashboard/modules/activity-log/components/category-value-change-record/category-value-change-record.component.html
+++ b/src/app/modules/dashboard/modules/activity-log/components/category-value-change-record/category-value-change-record.component.html
@@ -19,14 +19,18 @@
 
     <span class="flex flex-col items-end font-main font-bold w-auto min-w-fit {{ colorClass }}">
       @if (isSingleValue) {
-        <span>{{ symbol }}&nbsp;{{ record.value }}&nbsp;{{ record.account.currency.symbol }}</span>
+        <span>
+          {{ symbol }}{{ record.value | numberSpace }}
+          {{ record.account.currency.symbol }}
+        </span>
       } @else {
         <span class="text-base font-normal">
-          {{ symbol }}&nbsp;{{ record.convertedValue | currencySymbol }}
+          {{ symbol }}{{ record.convertedValue | numberSpace | currencySymbol }}
         </span>
 
         <span class="text-xs font-bold">
-          {{ symbol }}&nbsp;{{ record.value }}&nbsp;{{ record.account.currency.symbol }}
+          {{ symbol }}{{ record.value | numberSpace }}
+          {{ record.account.currency.symbol }}
         </span>
       }
     </span>
