--- a/src/app/modules/dashboard/modules/categories/components/category-item/category-item.component.html
+++ b/src/app/modules/dashboard/modules/categories/components/category-item/category-item.component.html
@@ -19,7 +19,7 @@
 
   <div class="flex items-center gap-x-2">
     <span class="font-main font-bold text-charcoal text-base">
-      {{ category?.value | currencySymbol }}</span
+      {{ category?.value | numberSpace | currencySymbol }}</span
     >
     <app-menu
       [menuActions]="menuActions"
