--- a/src/app/modules/dashboard/modules/info-cards/components/info-cards/current-month-balance-info-card/current-month-balance-info-card.component.html
+++ b/src/app/modules/dashboard/modules/info-cards/components/info-cards/current-month-balance-info-card/current-month-balance-info-card.component.html
@@ -6,6 +6,6 @@
   [bgColor]="data?.colorClasses?.bg | classToHexColor"
   [textColor]="data?.colorClasses?.text | classToHexColor"
   [iconName]="'calendar-dot-grid'"
-  [primaryText]="data.currentMonthBalance | currencySymbol"
+  [primaryText]="data.currentMonthBalance | numberSpace | currencySymbol"
   [secondaryText]="'dashboard.infoCards.currentMonthBalance' | translate"
 ></app-info-card>
