--- a/src/app/modules/dashboard/modules/info-cards/components/info-cards/accounts-info-card/accounts-info-card.component.scss
+++ b/src/app/modules/dashboard/modules/info-cards/components/info-cards/accounts-info-card/accounts-info-card.component.scss
@@ -1,5 +1,5 @@
 :host {
-  @media (min-width: 481px) {
+  @media (width > 480px) {
     .wrapper {
       .tip {
         transform: translateY(100%);
