--- a/src/app/modules/statistics/statistics.component.html
+++ b/src/app/modules/statistics/statistics.component.html
@@ -1,6 +1,7 @@
-<app-page-header
-  class="text-2xl"
-  [title]="buildTranslationKey('pageTitle') | translate"
-></app-page-header>
+@if (loading$ | async) {
+  <app-fullsize-loader class="absolute"></app-fullsize-loader>
+} @else {
+  <app-page-header class="text-2xl" [title]="'statistics.pageTitle' | translate"></app-page-header>
 
-<app-monthly-statistics></app-monthly-statistics>
+  <app-monthly-statistics></app-monthly-statistics>
+}
